# crowd-funding

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  requirements.txt
frontend/: config-overrides.js  package-lock.json  package.json
frontend/src/: App.js  idl.json
go_client/: README.md  go.mod  go.sum  main.go
programs/crowdfunding/: Cargo.toml
programs/crowdfunding/src/: errors.rs  instructions.rs  lib.rs  state.rs
rust_client/: Cargo.toml  README.md  campaign.txt
rust_client/src/: main.rs
tests/: crowdfunding.ts
