[package]
name = "rust_client"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base58 = "0.2"
sha2 = "0.10"
anyhow = "1.0"
bincode = "1.3"
bytemuck = { version = "1.0", features = ["derive"] }
